# nbody

./: C_Orbits.sln  ReadMe.txt
C_Orbits/: C_Orbits.vcxproj  C_Orbits.vcxproj.filters  orbit_integration.cpp  simulation.cpp  stdafx.cpp
Cpp_Orbits/: CMakeLists.txt  ReadMe.txt  datastructures.h  orbit_integration.cpp  orbit_integration.h  plot.py  simulation.cpp
Python_Orbits/: PlanetSmasher.sln
Python_Orbits/PlanetSmasher/: PlanetSmasher.py  PlanetSmasher.pyproj  PlanetSmasher_tests.py  planet_data.py
